<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".XXXHXG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:orientation="vertical">

        <com.example.into_gdufe.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.youth.banner.Banner
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner2"
            android:layout_width="match_parent"
            android:layout_height="320dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="12dp"
            android:text="广东财经大学校徽校训校歌"
            android:background="@color/main_green"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="【校徽】"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/xiaohui"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xh"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xx"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xh_js"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="【校歌】"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/xiaoge"/>

        </LinearLayout>
    </ScrollView>



</LinearLayout>